threat-policy/config/deploy/standalone/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-threat-policy
  namespace: kuadrant-system
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: threat-policy-system
          podSelector:
            matchLabels:
              app: threat-policy
      ports:
        - protocol: TCP
          port: 50052
